Fix card padding on mobile screens

--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ button.toggleTheme {
   right: 1rem;
   font-size: 1.3rem;
   cursor: pointer;
-  transition: background 0.2s ease, filter 0.2s ease;
+  transition: background 0.2s ease, filter 0.2s ease, color 0.2s ease;
 }
 
 button.toggleTheme:hover {
@@ -207,6 +207,9 @@ button.toggleTheme:hover {
   p {
     text-align: left;
     max-width: 100%;
+  }
+  .card_wrapper {
+    padding: 25px 0px 0px 0px !important;
   }
 }
 
